@@ -7,6 +7,9 @@ Changes in 3.3.0
           GEOSGeom_createEmptyPolygon_r, GEOSGeom_createEmptyCollection_r
   - CAPI: GEOSGeom_extractUniquePoints_r
   - CAPI: GEOSGetGeometryN support for single geometries
+- C++ API changes:
+  - Polygonizer::getCutEdges returns a const reference 
+  - Polygonizer::getDangles returns a const reference 
 
 Changes in 3.2.0 
 
